--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="albums-grid">
+  <% @albums.each do |album| %>
+    <%= render "albums/partials/album_card", album: album %>
+  <% end %>
+</div>
