--- a/app/assets/stylesheets/components/_album_card.scss
+++ b/app/assets/stylesheets/components/_album_card.scss
@@ -5,8 +5,74 @@
 }
 
 .album-card {
+  background-size: cover;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 250px;
+  text-align: center;
+  border: 4px solid black;
+  border-radius: 30px;
+
   a {
+    color: #AA14F0;
     height: 100%;
     width: 100%;
+    position: absolute;
+    font-size: 0;
+    background-color: rgba(0, 0, 0, 0.3);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    transition: 0.5s ease;
+    text-shadow: 1px 1px 0px rgb(250,250,250);
+    border-radius: 25px;
+
+    &:hover {
+      color: white;
+      background-color: rgba(0, 0, 0, 0.6);
+      text-shadow: 0px 0px 5px #BC8CF2;
+
+      p {
+        text-shadow: none;
+      }
+    }
+  }
+
+  p {
+    margin: 0;
+    font-size: 12px;
+    color: white;
+    text-shadow: 2px 2px 0px black;
+    transition: 0.5s ease;
+  }
+
+  h2 {
+    margin: 0;
+  }
+
+  .rb-position {
+    position: absolute;
+    bottom: 5px;
+    right: 8px;
+    font-size: 16px;
+    font-weight: bold;
+  }
+
+}
+
+.white-border {
+  border: 4px solid white;
+
+  a {
+    color: white;
+    text-shadow: 2px 2px 0px #aa14f0;
+
+    &:hover {
+      color: #BC8CF2;
+      text-shadow: 0px 0px 5px #aa14f0;
+    }
   }
 }
