--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -8,7 +8,7 @@
   box-shadow: 0px 3px 12px rgba(0,0,0,0.3);
   border-top: 4px solid black;
   border-bottom: 4px solid black;
-  transition: 1s ease;
+  transition: 0.5s ease;
 }
 
 .navbar-links {
@@ -17,11 +17,11 @@
   text-decoration: none;
   margin-left: 10px;
   color: #AA14F0;
-  transition: 1s ease;
+  transition: 0.5s ease;
   
   &:hover {
-    color: black;
-    text-shadow: 1px 1px 0px #AA14F0;
+    color: #BC8CF2;
+    text-shadow:none;
     font-weight: bold;
   }
 }
