--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
 <div class="navbar-custom navbar-collapse sticky-top" data-controller="navbar" data-action="scroll@window->navbar#updateNavbar">
-  <%= link_to "AirMusic", root_path, class: "navbar-brand navbar-links logo", "data-navbar-target": "linklogo" %>
+  <%= link_to "AIRMUSIC", root_path, class: "navbar-brand navbar-links logo", "data-navbar-target": "linklogo" %>
 
   <div class="d-flex justify-content-between">
     <% if user_signed_in? %>
