add responsiveness to home page cards grid, but navbar still to do responsiveness

--- a/app/assets/stylesheets/components/_album_card.scss
+++ b/app/assets/stylesheets/components/_album_card.scss
@@ -1,7 +1,33 @@
-.albums-grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-gap: 16px;
+@media(min-width: 1000px) {
+  .albums-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 16px;
+  }
+}
+
+@media(max-width: 1000px) {
+  .albums-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 16px;
+  }
+}
+
+@media(max-width: 600px) {
+  .albums-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 16px;
+  }
+}
+
+@media(max-width: 375px) {
+  .albums-grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 16px;
+  }
 }
 
 .album-card {
