--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -4,7 +4,7 @@
   padding: 40px 24px 24px 24px;
   border-radius: 0px 0px 30px 30px;
   position: relative;
-  box-shadow: 0px 12px 10px -8px #aa14f0;
+  box-shadow: 0px 0px 60px #aa14f0;
 }
 
 h2 {
