--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
   <h1>Many albums at the palm of your hand.</h1>
 </div>
 
-<div class="container white-round-bg">
+<div class="white-round-bg">
   <h2 class="pb-1">Featured albums...</h2>
 
   <div class="albums-grid">
@@ -13,7 +13,7 @@
 </div>
 
 <% if user_signed_in? %>
-  <div class="container mb-3 black-edged-bg">
+  <div class="mb-3 black-edged-bg">
     <h2 class="pb-1 pt-2">My albums...</h2>
 
     <div class="albums-grid">
