Just needs to disable buy button when album already bought and add reviews to albums.

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,3 +4,7 @@
 @import "navbar";
 @import "album_card";
 @import "banner";
+@import "search_form";
+@import "buttons";
+@import "audio_bar";
+@import "buy_form";
