--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,8 +3,13 @@
 
   <div class="d-flex justify-content-between">
     <% if user_signed_in? %>
+      <%= render "shared/search_form" %>
+
       <div class="d-flex">
         <%= link_to "Sign-Out", destroy_user_session_path, method: :delete, class: "navbar-brand navbar-links", "data-navbar-target": "linklogo" %>
+      </div>
+      <div class="d-flex">
+        <%= link_to "My Albums", my_albums_path, class: "navbar-brand navbar-links", "data-navbar-target": "linklogo" %>
       </div>
       <div class="d-flex">
         <%= link_to "Edit Profile", edit_user_registration_path, class: "navbar-brand navbar-links", "data-navbar-target": "linklogo" %>
@@ -13,11 +18,13 @@
         <%= cl_image_tag current_user.photo.key, class:"avatar me-3" %>
       </div>
     <% else %>
+      <%= render "shared/search_form" %>
+
       <div>
-        <%= link_to "Login", new_user_session_path, class: "navbar-brand navbar-links", "data-navbar-target": "linklogo" %>
+        <%= link_to "Login", new_user_session_path, class: "navbar-brand navbar-links d-flex", "data-navbar-target": "linklogo" %>
       </div>
       <div class="left-border-link">
-        <%= link_to "Sign-Up", new_user_registration_path, class: "navbar-brand navbar-links", "data-navbar-target": "linklogo" %>
+        <%= link_to "Sign-Up", new_user_registration_path, class: "navbar-brand navbar-links d-flex", "data-navbar-target": "linklogo" %>
       </div>
     <% end %>
   </div>
