--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,6 +4,12 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
+    <%= f.input :role,
+                as: :select,
+                collection: ["artist", "user"],
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "role" } %>
     <%= f.input :username,
                 required: true,
                 autofocus: true,
