--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,6 +1,13 @@
 .avatar {
   width: 40px;
   border-radius: 50%;
+  background-size: cover;
+  background-position: center;
+  border: none;
+
+  &:hover {
+    border: 2px solid #aa14f0;
+  }
 }
 .avatar-large {
   width: 56px;
