--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,17 +5,18 @@
     <% if user_signed_in? %>
       <%= render "shared/search_form" %>
 
-      <div class="d-flex">
+      <div class="d-flex" data-navbar-target="navlinks">
         <%= link_to "Sign-Out", destroy_user_session_path, method: :delete, class: "navbar-brand navbar-links", "data-navbar-target": "linklogo" %>
       </div>
-      <div class="d-flex">
+      <div class="d-flex" data-navbar-target="navlinks">
         <%= link_to "My Albums", my_albums_path, class: "navbar-brand navbar-links", "data-navbar-target": "linklogo" %>
       </div>
-      <div class="d-flex">
+      <div class="d-flex" data-navbar-target="navlinks">
         <%= link_to "Edit Profile", edit_user_registration_path, class: "navbar-brand navbar-links", "data-navbar-target": "linklogo" %>
       </div>
       <div class="d-flex">
-        <%= cl_image_tag current_user.photo.key, class:"avatar me-3" %>
+        <button type="button" class="avatar me-3" style="background-image: url('<%= cl_image_path current_user.photo.key %>')" data-action="click->navbar#avatarMenu">
+        </button>
       </div>
     <% else %>
       <%= render "shared/search_form" %>
@@ -27,5 +28,20 @@
         <%= link_to "Sign-Up", new_user_registration_path, class: "navbar-brand navbar-links d-flex", "data-navbar-target": "linklogo" %>
       </div>
     <% end %>
+  </div>
+
+  <div class="avatarmenu hide" data-navbar-target="avatarmenu">
+    <div class="row">
+      <button data-action="click->navbar#closeMenu">x</button>
+    </div>
+    <div class="row">
+      <%= link_to "My Albums", my_albums_path, class: "navbar-brand navbar-links", "data-navbar-target": "linklogo" %>
+    </div>
+    <div class="row">
+      <%= link_to "Edit Profile", edit_user_registration_path, class: "navbar-brand navbar-links", "data-navbar-target": "linklogo" %>
+    </div>
+    <div class="row">
+      <%= link_to "Sign-Out", destroy_user_session_path, method: :delete, class: "navbar-brand navbar-links", "data-navbar-target": "linklogo" %>
+    </div>
   </div>
 </div>
