--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -25,3 +25,12 @@
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
 }
+
+.avatar-mini {
+  width: 30px;
+  border-radius: 50%;
+  background-size: cover;
+  background-position: center;
+  border: none;
+  height: 30px;
+}
