--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -22,7 +22,7 @@
       <div>
         <%= link_to "Login", new_user_session_path, class: "navbar-brand navbar-links d-flex", "data-navbar-target": "linklogo" %>
       </div>
-      <div class="left-border-link">
+      <div>
         <%= link_to "Sign-Up", new_user_registration_path, class: "navbar-brand navbar-links d-flex", "data-navbar-target": "linklogo" %>
       </div>
     <% end %>
