--- a/app/assets/stylesheets/components/_alert.scss
+++ b/app/assets/stylesheets/components/_alert.scss
@@ -1,6 +1,16 @@
 .alert {
   position: fixed;
-  bottom: 16px;
-  right: 16px;
+  top: 80px;
+  right: 10px;
   z-index: 1000;
+}
+
+.custom-alert {
+  border: 1px solid white;
+  border-radius: 25px;
+  background: rgba(0, 0, 0, 0.7);
+  color: white;
+  padding: 10px 14px;
+  box-shadow: 0px 0px 10px white;
+  font-size: 14px;
 }
