--- a/app/assets/stylesheets/components/_search_form.scss
+++ b/app/assets/stylesheets/components/_search_form.scss
@@ -21,3 +21,11 @@
 .search-button {
   box-shadow: 0px 0px 15px #aa14f0;
 }
+
+.music-form {
+  transition: 0.5s ease;
+}
+
+.d-none {
+  transition: 0.5s ease;
+}
