--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,11 +1,15 @@
-<div class="container my-3">
-  <h2>Edit My <%= current_user.role.capitalize %> Profile</h2>
+<div class="container mt-3 px-3">
+  <h2 style="text-align: center">Edit My <%= current_user.role.capitalize %> Profile</h2>
 
   <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
     <%= f.error_notification %>
 
     <div class="form-inputs">
       <%= f.input :email, required: true, autofocus: true %>
+      <%= f.input :username,
+                  required: true %>
+      <%= f.input :photo, as: :file, 
+                  required: false %>
 
       <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
         <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
@@ -22,20 +26,17 @@
                   hint: "we need your current password to confirm your changes",
                   required: true,
                   input_html: { autocomplete: "current-password" } %>
-      <%= f.input :photo, as: :file, 
-                  required: false %>
-      <%= f.input :username,
-                  required: true %>
     </div>
 
     <div class="form-actions">
-      <%= f.button :submit, "Update", class: "search-button"  %>
+      <%= f.button :submit, "Update", class: "button-round-shadow black-bg" %>
     </div>
   <% end %>
 
-  <h3 class="mt-3">Cancel my account</h3>
+  <h3 class="mt-5" style="text-align: center">Cancel My Account</h3>
 
-  <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-  <%= link_to "Back", :back %>
+  <p style="text-align: center">Unhappy?</p>
+  <div style="text-align: center">
+    <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "cancel-account-btn" %>
+  </div>
 </div>
