--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,3 @@
-<div class="ms-3 d-flex mt-5">
-  <p class="pe-1">AIRMUSIC © Copyrights 2010 / 1010 | <strong>Contact us at:</strong></p>
-  <%= link_to "airmusic@official.com", "#" %>
+<div class="mx-3 d-flex mt-5">
+  <p class="pe-1">AIRMUSIC © Copyrights 2010 / 1010 | <strong>Contact us at:</strong> <%= link_to "airmusic@official.com", "#" %></p>
 </div>
